--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "react-tailwindcss-datepicker": "^1.6.6",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
