--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "react-tailwindcss-datepicker": "^1.6.6",
+    "react-year-range-picker": "^1.0.2",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   }
