--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "flowbite-react": "^0.5.0",
     "moment": "^2.29.4",
     "next": "13.4.13",
+    "node-sass": "^9.0.0",
     "postcss": "^8.4.27",
     "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "react-tailwindcss-datepicker": "^1.6.6",
-    "react-year-range-picker": "^1.0.2",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-datepicker": "^4.15.0"
   }
 }
